# glove.c

./: .clang-format  .gitignore  CMakeLists.txt  CONFIG  Doxyfile  LICENSE  README.md
.github/workflows/: doxygen-gh-pages.yml
docs/: GloVe_8java.html  annotated.html  classcom_1_1shubham0204_1_1projects_1_1glove_1_1GloVe-members.html  classcom_1_1shubham0204_1_1projects_1_1glove_1_1GloVe.html  dir_06339fcf8d246fab2677ca3ee3eb82c6.html  dir_3dc2dafe8fcc778dbe7dde0b48bb7144.html  dir_4cf7e5d77511369fefcc36c713dead87.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7aa6bd6f1fdf364b6ac35d0129fba7ab.html  dir_ce4d0e5e48934e7961b9f9d0f895a4b6.html  functions_func.html  glove_8h.html  glove_8h__incl.dot  glove_8h_source.html  structglove-members.html
docs/html/: classes.html  dir_369b3ee587f51645cf2c73e166a5c2d9.html  dir_9072c7b35c7ec62e24397aaa53b0153a.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_db5269dea6f2141bbff9625feff52b1e.html  dir_f02a39413166316259632c57420d20d1.html  files.html  functions.html  globals.html  globals_func.html  graph_legend.html  index.html  structglove.html
docs/html/search/: classes_0.js  searchdata.js
docs/search/: all_0.js  files_0.js  functions_0.js
examples/java/: .gitignore  settings.gradle.kts
examples/java/app/: build.gradle.kts
examples/python/: main.py
examples/python/glove/: __init__.py  impl.py
src/: cache.c  glove.c  glove.h  hashmap.c  jni.c  main.c
